mypod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ginx
  labels:
    environment: production
    tiers: backend
    version: "1.25"
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
